--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 import Navigation from "../components/Navigation.jsx"
 import { Hero } from "../components/Hero.jsx"
+import { EventDetails } from "../components/EventDetails.jsx"
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
@@ -10,4 +11,5 @@ import { Hero } from "../components/Hero.jsx"
 <Layout>
   <Navigation client:load />
   <Hero client:load />
+  <EventDetails client:load />
 </Layout>
