--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,9 @@ import Layout from '../layouts/Layout.astro';
 import Navigation from "../components/Navigation.jsx"
 import { Hero } from "../components/Hero.jsx"
 import { EventDetails } from "../components/EventDetails.jsx"
+import { OurStory } from "../components/OurStory.jsx"
+import { Gallery } from "../components/Gallery.jsx"
+import { Footer } from "../components/Footer.jsx"
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
@@ -11,5 +14,8 @@ import { EventDetails } from "../components/EventDetails.jsx"
 <Layout>
   <Navigation client:load />
   <Hero client:load />
+  <OurStory client:load />
   <EventDetails client:load />
+  <Gallery client:load />
+  <Footer client:load />
 </Layout>
