--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,21 +1,21 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Navigation from "../components/Navigation.jsx"
-import { Hero } from "../components/Hero.jsx"
-import { EventDetails } from "../components/EventDetails.jsx"
-import { OurStory } from "../components/OurStory.jsx"
-import { Gallery } from "../components/Gallery.jsx"
-import { Footer } from "../components/Footer.jsx"
+import Navigation from "../components/Navigation.astro"
+import Hero  from "../components/Hero.astro"
+import EventDetails  from "../components/EventDetails.astro"
+import OurStory  from "../components/OurStory.astro"
+import Gallery  from "../components/Gallery.astro"
+import Footer  from "../components/Footer.astro"
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
 <Layout>
-  <Navigation client:load />
-  <Hero client:load />
-  <OurStory client:load />
-  <EventDetails client:load />
-  <Gallery client:load />
-  <Footer client:load />
+  <Navigation></Navigation>
+  <Hero></Hero>
+  <OurStory></OurStory>
+  <EventDetails></EventDetails>
+  <Gallery></Gallery>
+  <Footer></Footer>
 </Layout>
