--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,10 @@ import EventDetails  from "../components/EventDetails.astro"
 import OurStory  from "../components/OurStory.astro"
 import Gallery  from "../components/Gallery.astro"
 import Footer  from "../components/Footer.astro"
+import GoogleForm from '../components/GoogleForm.astro';
+import GiftAccount from '../components/GiftAccount.astro';
+import Accommodation from '../components/Accommodation.astro';
+
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
@@ -16,6 +20,9 @@ import Footer  from "../components/Footer.astro"
   <Hero></Hero>
   <OurStory></OurStory>
   <EventDetails></EventDetails>
+  <Accommodation></Accommodation>
+  <GoogleForm formId='1FAIpQLSfEwi2V9hYNA_R_7y8-mN7DXkQoWRaJwqDSc4MipCRyS-08gw'></GoogleForm>
+  <GiftAccount accountNumber='ES91 2066 6360 7164 8388 3382'></GiftAccount>
   <Gallery></Gallery>
   <Footer></Footer>
 </Layout>
