--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,7 +31,20 @@ const description = "Únete a nosotros para celebrar nuestro día especial"
     rel="stylesheet"
     />
    <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&family=Birthstone&family=Parisienne&display=swap" rel="stylesheet">
+     <!-- Open Graph Image -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content={title} />
+    <meta property="og:description" content={description} />
+    <meta property="og:image" content="/mariafer/mariaFerSicilia.jpg" />
+    <meta property="og:url" content="https://carlostorralba12.github.io/mariafer/" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
 
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content={title} />
+    <meta name="twitter:description" content={description} />
+    <meta name="twitter:image" content="/mariafer/mariaFerSicilia.jpg" />
   </head>
 
   <body class="font-sans antialiased">
