Change: update navigation for mobile view

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -58,9 +58,9 @@ const {
 
       <!-- Hearts -->
       <div class="footer__hearts">
-        <span class="footer__heart" role="img" aria-label="corazón">💕</span>
+        <span class="footer__heart" role="img" aria-label="corazón">🦷</span>
         <span class="footer__heart footer__heart--delay-1" role="img" aria-label="corazón">❤️</span>
-        <span class="footer__heart footer__heart--delay-2" role="img" aria-label="corazón">💕</span>
+        <span class="footer__heart footer__heart--delay-2" role="img" aria-label="corazón">🦷</span>
       </div>
 
       <!-- Copyright -->
